<resources>
    <string name="app_name">eReader</string>
    <string name="nav_header_title">eReader</string>
    <string name="nav_header_subtitle">Version X</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_library">Library</string>
    <string name="menu_sync">Sync</string>

    <!-- Home -->
    <string name="home_label_favs">Favorites</string>
    <string name="home_label_recents">Recent Files</string>
    <string name="home_label_no_files">No books found</string>

    <!-- Library -->
    <string name="library_label_no_files">No books found</string>

    <!-- Book Context Menu -->
    <string name="book_ctm_info">Book information</string>
    <string name="book_ctm_fav_add">Add to Favorites</string>
    <string name="book_ctm_fav_del">Remove from Favorites</string>
    <string name="book_ctm_del">Remove from Library</string>

    <!-- Preference Restart -->
    <string name="restart_title">Warning</string>
    <string name="restart_message">The app will now restart</string>
    <string name="restart_btn_ok">OK</string>

    <!-- Preference Titles -->
    <string name="settings_global_header">Global</string>
    <string name="settings_sync_header">Sync</string>

    <!-- Preferences Reset -->
    <string name="settings_reset">Reset Settings</string>
    <string name="settings_reset_confirm">Do you confirm the settings reset ?</string>
    <string name="settings_reset_btn_ok">OK</string>
    <string name="settings_reset_btn_cancel">Cancel</string>
    <string name="settings_rebase">Purge data</string>
    <string name="settings_rebase_confirm">Do you confirm the data purge ?</string>
    <string name="settings_clean_cache">Purge cache</string>
    <string name="settings_clean_cache_confirm">Do you confirm the cache purge ?</string>

    <!-- Preferences Global -->
    <string name="settings_app_lang_title">Language</string>
    <string name="settings_app_storage_title">Storage</string>
    <string name="settings_app_storage_intern">Device memory</string>
    <string name="settings_app_storage_sd">SD Card</string>

    <!-- Preferences Sync -->
    <string name="settings_sync_host_title">Server Address</string>
    <string name="settings_sync_port_title">Server Port</string>
    <string name="settings_sync_user_title">Server User</string>
    <string name="settings_sync_password_title">Server Password</string>

    <!-- Sync -->
    <string name="sync_loading">Loading ...</string>
    <string name="sync_btn_download">Download selection</string>
    <string name="sync_btn_upload">Upload selection</string>
    <string name="sync_btn_refresh">Reload list</string>
    <string name="sync_message_download_end_ok">Download Complete</string>
    <string name="sync_message_download_end_error">Download Ended, [X] Error(s)</string>
    <string name="sync_message_error_server_access">Unable to contact server</string>
    <string name="sync_message_error_login">Login Failled</string>
    <string name="sync_message_error_processing_data">Error in data parsing</string>

    <!-- Dialog -->
    <string name="dialog_ok">OK</string>
    <string name="dialog_save">Save</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_close">Close</string>
    <string name="dialog_download_title">Downloading books ...</string>
    <string name="dialog_get_info_title">Loading books files info ...</string>
    <string name="dialog_loading">Loading ...</string>
    <string name="dialog_upload_info_title">Upload books data</string>

    <!-- Dialog Book Info -->
    <string name="dialog_book_info_title">Title</string>
    <string name="dialog_book_info_authors">Author(s)</string>
    <string name="dialog_book_info_import_cover">Import Cover</string>
    <string name="dialog_book_info_series">Series</string>
    <string name="dialog_book_info_tags">Tags</string>
    <string name="dialog_book_info_synopsis">Synopsis</string>

    <!-- Reader -->
    <string name="reader_btn_negatif">Négatif</string>
    <string name="reader_btn_toc">Table des matières</string>
    <string name="reader_btn_zoom_reset">Reset zoom</string>
    <string name="sync_confirm_replace_title">Warning</string>
    <string name="sync_confirm_replace_message">Some books are already on device. Do you confirm replacing already existing files ?</string>
</resources>