<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/home_label_favs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/home_label_favs"
                android:textSize="24sp" />

            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/home_flex_layout_favs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                app:flexDirection="row"
                app:flexWrap="wrap"
                app:justifyContent="space_evenly">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    tools:layout_editor_absoluteX="10dp"
                    tools:layout_editor_absoluteY="10dp">

                    <ProgressBar
                        android:id="@+id/home_favs_loading_progress"
                        style="?android:attr/progressBarStyleLarge"
                        android:layout_width="50dp"
                        android:layout_height="50dp" />

                    <TextView
                        android:id="@+id/home_favs_loading_text"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:gravity="center_vertical"
                        android:text="@string/sync_loading" />
                </LinearLayout>

            </com.google.android.flexbox.FlexboxLayout>

            <TextView
                android:id="@+id/home_label_recents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/home_label_recents"
                android:textSize="24sp" />

            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/home_flex_layout_recents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                app:flexDirection="row"
                app:flexWrap="wrap"
                app:justifyContent="space_evenly">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    tools:layout_editor_absoluteX="10dp"
                    tools:layout_editor_absoluteY="10dp">

                    <ProgressBar
                        android:id="@+id/home_recents_loading_progress"
                        style="?android:attr/progressBarStyleLarge"
                        android:layout_width="50dp"
                        android:layout_height="50dp" />

                    <TextView
                        android:id="@+id/home_recents_loading_text"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:gravity="center_vertical"
                        android:text="@string/sync_loading" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    tools:layout_editor_absoluteX="10dp"
                    tools:layout_editor_absoluteY="10dp">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_empty" />

                    <TextView
                        android:id="@+id/home_recents_no_vontent_text"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/home_label_no_files" />
                </LinearLayout>

            </com.google.android.flexbox.FlexboxLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>